Attempting to solve vertical scroll issue on mobile

--- a/layout.css
+++ b/layout.css
@@ -1,9 +1,10 @@
 html, body {
     font-size: 100%
-    height:100%;
+    height: 100%;
     margin: 0;
     padding: 0;
-    overflow:hidden;    /*Remove scroll bar*/
+    overflow: hidden;    /*Remove scroll bar*/
+    position: fixed;
 }
 
 p {
@@ -26,10 +27,9 @@ img {
 
 .column {
     flex: 50%;
-    width:50%;
+    width: 50%;
     height: 50%;
     padding: 0px;
-    /*align-items: stretch;*/
 }
 
 .baseImg, .txt, .imgButton {
